<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/catalogBackground"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_productName"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/layoutWidth"
            android:layout_weight="2"
            android:paddingLeft="@dimen/paddingLeft"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/textViewInfoStyle"
            android:text="@string/category_quantity" />
    <!-- Quantity category -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="@dimen/layoutWidth"
        android:layout_weight="2"
        android:paddingLeft="@dimen/paddingLeft"
        android:orientation="horizontal">
        >

        <ImageButton
            android:id="@+id/edit_quantity_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layoutMargin"
            android:src="@drawable/ic_action_add"/>

        <EditText
            android:id="@+id/edit_clothes_quantity"
            style="@style/EditorFieldStyle"
            android:inputType="number"
            android:gravity="center_horizontal" />

        <ImageButton
            android:id="@+id/edit_quantity_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layoutMargin"
            android:src="@drawable/ic_action_minus"
            />

    </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/layoutWidth"
            android:layout_weight="2"
            android:paddingLeft="@dimen/paddingLeft">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/hint_product_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Units for price (pounds) -->
            <TextView
                android:id="@+id/label_price_units"
                android:text="@string/pounds"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>
    <!-- Overview category -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!-- Label -->
    <TextView
        android:text="@string/category_SupplierName"
        style="@style/CategoryStyle" />

    <!-- Input fields -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="@dimen/layoutWidth"
        android:layout_weight="2"
        android:paddingLeft="@dimen/paddingLeft"
        android:orientation="vertical">

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_Supplier_name"
            android:hint="@string/hint_Supplier_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />


    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_SupplierPhoneNumber"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/layoutWidth"
            android:layout_weight="2"
            android:paddingLeft="@dimen/paddingLeft"
            android:orientation="horizontal">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_Supplier_PhoneNumber"
                android:hint="@string/hint_Supplier_phoneNumber"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <ImageButton
                android:id="@+id/call_supplier_phone_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layoutMargin"
                android:src="@drawable/ic_action_phone_start"/>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
